--- a/src/about/style.css
+++ b/src/about/style.css
@@ -1,4 +1,86 @@
+/*  
+COLORS :
+black : #222
+grey : #999
+orange : #f68773
+color banner top : #F2EDE9
+*/
 * {
-    font-family: "Roboto", sans-serif;
-  }
-  
+  font-family: "Roboto", sans-serif;
+}
+main {
+  padding-left: 20%;
+}
+.parent {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+}
+    
+  .div1 { grid-area: 1 / 1 / 3 / 3; }
+  .div2 { grid-area: 1 / 3 / 2 / 4; }
+  .div3 { grid-area: 1 / 4 / 2 / 5; }
+  .div4 { grid-area: 2 / 3 / 3 / 4; }
+  .div5 { grid-area: 2 / 4 / 3 / 5; }
+
+.white-text {
+  color: white;
+}
+.black-background {
+  background-color: #3c3c3c;
+  padding: 20px 0px 20px 0px;
+  margin: 0px;
+}
+.center {
+  text-align: center;
+}
+.grey-text {
+  color: grey;
+}
+.grey-dot {
+  background-color: grey;
+  border-radius: 50%;
+  color: grey;
+}
+.circle {
+  color: gray;
+  width: 5px;
+  position: relative;
+  top: -3px;
+}
+.black-text {
+  color: #222;
+}
+nav {
+  background-color: whitesmoke;
+  padding: 10px 0px 10px 0px;
+  margin-bottom: 100px;
+}
+.padded {
+  padding-left: 20%;
+}
+.orange-text {
+  color: #f68773;
+}
+.img1 {
+  float: right;
+  width: 50%;
+}
+.bold {
+  font-weight: bold;
+}
+h2 {
+  width: 20%;
+}
+.grey-text {
+  color: #999;
+}
+.p1 {
+  padding-bottom: 300px;
+}
+.img2 {
+  float: left;
+  width: 30%;
+}
