--- a/src/shop/css/style.css
+++ b/src/shop/css/style.css
@@ -1,4 +1,5 @@
-/*  COLORS :
+/*  
+COLORS :
 black : #222
 grey : #999
 orange : #f68773
@@ -184,9 +185,18 @@ h1 h2 h3 {
   .aside {
     font-size: xx-small;
     float: left;
+    padding: 0%;
   }
   .compare {
     display: none;
+  }
+  .div1.div2.div3.div4.div5.div6.div7.div8.div9.div10.div11.div12 {
+    max-width: 30%;
+    height: auto;
+  }
+  .item {
+    max-width: 75%;
+    height: auto;
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 992px) {
@@ -208,6 +218,14 @@ h1 h2 h3 {
     grid-row-gap: 50px;
     margin-left: 1%;
     float: left;
+  }
+  .div1.div2.div3.div4.div5.div6.div7.div8.div9.div10.div11.div12 {
+    max-width: 70%;
+    height: auto;
+  }
+  .item {
+    max-width: 70%;
+    height: auto;
   }
 }
 @media only screen and (min-width: 992px) {
@@ -264,5 +282,13 @@ h1 h2 h3 {
   }
   .div12 {
     grid-area: 4 / 3 / 5 / 4;
+  }
+  .div1.div2.div3.div4.div5.div6.div7.div8.div9.div10.div11.div12 {
+    max-width: 100%;
+    height: auto;
+  }
+  .item {
+    max-width: 100%;
+    height: auto;
   }
 }
