--- a/src/css/store.css
+++ b/src/css/store.css
@@ -16,7 +16,16 @@ body {
 @media only screen and (min-width: 959px) {
   html .border {
     background-color: #3c3c3c;
-    color: white; }
+    color: white;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    height: 70px;
+    text-transform: capitalize;
+    line-height: 70px;
+    font-size: 1.5em;
+    margin-bottom: 5%; }
   html main {
     width: 75%;
     margin-left: auto;
@@ -27,10 +36,21 @@ body {
       grid-template-rows: 1fr;
       gap: 5%;
       grid-template-areas: "area distance "; }
-      html main article section .grid-container .area {
-        grid-area: area; }
+      html main article section .grid-container .button {
+        background-color: black;
+        color: white;
+        text-transform: uppercase;
+        width: 150px;
+        height: 30px;
+        margin-top: 3%; }
+      html main article section .grid-container .area fieldset h1 {
+        text-transform: uppercase; }
+      html main article section .grid-container .area fieldset .columns {
+        columns: 2; }
       html main article section .grid-container .distance {
         grid-area: distance; }
+        html main article section .grid-container .distance fieldset h1 {
+          text-transform: uppercase; }
     html main article section {
       margin-top: 2%; }
       html main article section .grid-container-2 {
@@ -44,9 +64,19 @@ body {
           height: 40em;
           border: solid;
           overflow: scroll; }
-          html main article section .grid-container-2 .leftList .box .image img {
+          html main article section .grid-container-2 .leftList .box .columns2 .image img {
             max-width: 50%; }
+          html main article section .grid-container-2 .leftList .box .columns2 h2 {
+            text-transform: capitalize; }
         html main article section .grid-container-2 .map {
           grid-area: map; }
           html main article section .grid-container-2 .map .ImgMap img {
-            max-width: 100%; } }
+            max-width: 100%; }
+    html main .footer {
+      columns: 2; }
+      html main .footer .left ul li {
+        display: inline;
+        margin: 5px; }
+      html main .footer .right ul li {
+        display: inline;
+        margin: 5px; } }
